<resources>
    <string name="app_name">Tractiv</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_home">Home</string>
    <string name="title_activitas">Activity</string>
    <string name="space" />
    <string name="discover">Discover</string>
    <string name="profile">Profile</string>
</resources>